--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -9,65 +9,92 @@
 body {
   background-color: #f6f6f6;
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   color: #888;
   font-family: Helvetica, sans-serif;
+  font-size: 16px;
   margin: 0;
   padding: 0;
 }
 
 nav {
   background-color: #383838;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  padding-top: 15px;
+  overflow: hidden;
+  width: 100%;
 }
 
-nav .nav-bar li {
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  margin-right: 20px;
-  vertical-align: middle;
+nav .my-left button {
+  display: none;
 }
 
-nav .nav-bar a {
+nav .my-left a {
   color: #888;
-  font-size: 16px;
-  text-transform: uppercase;
-}
-
-nav .nav-bar a i {
-  margin: 0 10px;
-}
-
-nav .nav-bar button {
-  background-color: #d35266;
-  border: 0;
-  border-radius: 3px;
-  color: #fff;
-  font-size: 16px;
-  font-weight: bold;
-  padding: 15px;
-  text-transform: uppercase;
+  line-height: 3em;
 }
 
 nav .right {
-  margin-right: 20px;
-  padding-top: 15px;
+  display: none;
 }
 
-nav .right a {
-  color: #888;
-  font-size: 18px;
-  text-transform: uppercase;
+@media (min-width: 376px) {
+  nav .my-left {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: space-evenly;
+    -ms-flex-pack: space-evenly;
+    justify-content: space-evenly;
+  }
+
+  nav .my-left button {
+    background-color: #d35266;
+    border: 0;
+    border-radius: 3px;
+    color: #fff;
+    display: block;
+    font-size: 14px;
+    font-weight: bold;
+    line-height: 2em;
+    margin-top: 10px;
+    text-transform: uppercase;
+  }
+
+  nav .right {
+    display: none;
+  }
 }
 
-nav .right a i {
-  margin: 0 10px;
+@media (min-width: 768px) {
+  nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    padding: 0 20px;
+  }
+
+  nav .my-left span {
+    margin-right: 20px;
+  }
+
+  nav .right {
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    margin-right: 20px;
+    padding-top: 15px;
+  }
+
+  nav .right a {
+    color: #888;
+    font-size: 18px;
+    line-height: 1em;
+    text-transform: uppercase;
+  }
+
+  nav .right a i {
+    margin: 0 10px;
+  }
 }
-/*# sourceMappingURL=app.css.map */
