--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -9,7 +9,7 @@
 body {
   background-color: #f6f6f6;
   -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+          box-sizing: border-box;
   color: #888;
   font-family: Helvetica, sans-serif;
   font-size: 16px;
@@ -42,10 +42,9 @@ nav .right {
     display: -ms-flexbox;
     display: flex;
     -webkit-box-pack: space-evenly;
-    -ms-flex-pack: space-evenly;
-    justify-content: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
   }
-
   nav .my-left button {
     background-color: #d35266;
     border: 0;
@@ -58,7 +57,6 @@ nav .right {
     margin-top: 10px;
     text-transform: uppercase;
   }
-
   nav .right {
     display: none;
   }
@@ -70,15 +68,13 @@ nav .right {
     display: -ms-flexbox;
     display: flex;
     -webkit-box-pack: justify;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     padding: 0 20px;
   }
-
   nav .my-left span {
     margin-right: 20px;
   }
-
   nav .right {
     display: -webkit-inline-box;
     display: -ms-inline-flexbox;
@@ -86,15 +82,67 @@ nav .right {
     margin-right: 20px;
     padding-top: 15px;
   }
-
   nav .right a {
     color: #888;
     font-size: 18px;
     line-height: 1em;
     text-transform: uppercase;
   }
-
   nav .right a i {
     margin: 0 10px;
   }
 }
+
+.hero {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #d35266;
+  color: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding-bottom: 30px;
+  padding-top: 30px;
+}
+
+.hero h1 {
+  font-size: 60px;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+.hero p {
+  font-size: 25px;
+}
+
+.hero form select {
+  background-color: #fff;
+  border: 0;
+  padding: 17px 10px;
+  width: 25%;
+}
+
+.hero form input {
+  border: 0;
+  padding: 15px 10px;
+  width: 25%;
+}
+
+.hero form input[type="submit"] {
+  background-color: #383838;
+  color: #fff;
+  margin-left: 10px;
+  width: 15%;
+}
+
+@media (max-width: 767px) {
+  .hero {
+    display: none;
+  }
+}
+/*# sourceMappingURL=app.css.map */
