--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  background-color: #f6f6f6;
+  background-color: #fff;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   color: #888;
@@ -144,5 +144,27 @@ nav .right {
   .hero {
     display: none;
   }
+}
+
+.ads {
+  padding: 30px 0;
+  background-color: #fff;
+}
+
+.ads h2 {
+  font-size: 22px;
+  font-weight: bold;
+}
+
+.ads img {
+  padding: 20px;
+  width: 200px;
+}
+
+.ads span {
+  background-color: #d35266;
+  color: #fff;
+  margin-right: 1px;
+  padding: 15px;
 }
 /*# sourceMappingURL=app.css.map */
