--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -147,8 +147,8 @@ nav .right {
 }
 
 .ads {
-  padding: 30px 0;
   background-color: #fff;
+  padding: 30px 0;
 }
 
 .ads h2 {
@@ -166,5 +166,18 @@ nav .right {
   color: #fff;
   margin-right: 1px;
   padding: 15px;
+}
+
+.electronics {
+  background-color: #f6f6f6;
+  padding-top: 30px;
+}
+
+.electronics .card-group {
+  border-top: 1px solid #888;
+}
+
+.electronics .card-group .card-body h5 {
+  color: #383838;
 }
 /*# sourceMappingURL=app.css.map */
