--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -145,8 +145,8 @@ nav {
 }
 
 .ads {
-  padding: 30px 0;
   background-color: $w;
+  padding: 30px 0;
 
   h2 {
     font-size: 22px;
@@ -163,5 +163,18 @@ nav {
     color: $w;
     margin-right: 1px;
     padding: 15px;
+  }
+}
+
+.electronics {
+  background-color: $bg;
+  padding-top: 30px;
+  .card-group {
+    border-top: 1px solid $lite;
+    .card-body {
+      h5 {
+        color: $dark;
+      }
+    }
   }
 }
