--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -171,8 +171,20 @@ nav {
   background-color: $bg;
   padding-top: 30px;
 
-  h2 {
-    font-size: 24px;
+  .title {
+    display: flex;
+    justify-content: space-between;
+
+    h2 {
+      font-size: 24px;
+    }
+
+    p {
+      a {
+        color: $mar;
+        font-weight: bold;
+      }
+    }
   }
 
   .card-group {
