finish desktop results section

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -9,7 +9,7 @@
 body {
   background-color: #fff;
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   color: #888;
   font-family: Helvetica, sans-serif;
   font-size: 16px;
@@ -42,9 +42,10 @@ nav .right {
     display: -ms-flexbox;
     display: flex;
     -webkit-box-pack: space-evenly;
-        -ms-flex-pack: space-evenly;
-            justify-content: space-evenly;
+    -ms-flex-pack: space-evenly;
+    justify-content: space-evenly;
   }
+
   nav .my-left button {
     background-color: #d35266;
     border: 0;
@@ -57,6 +58,7 @@ nav .right {
     margin-top: 10px;
     text-transform: uppercase;
   }
+
   nav .right {
     display: none;
   }
@@ -68,13 +70,15 @@ nav .right {
     display: -ms-flexbox;
     display: flex;
     -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
     padding: 0 20px;
   }
+
   nav .my-left span {
     margin-right: 20px;
   }
+
   nav .right {
     display: -webkit-inline-box;
     display: -ms-inline-flexbox;
@@ -82,12 +86,14 @@ nav .right {
     margin-right: 20px;
     padding-top: 15px;
   }
+
   nav .right a {
     color: #888;
     font-size: 18px;
     line-height: 1em;
     text-transform: uppercase;
   }
+
   nav .right a i {
     margin: 0 10px;
   }
@@ -95,8 +101,8 @@ nav .right {
 
 .hero {
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   background-color: #d35266;
   color: #fff;
   display: -webkit-box;
@@ -104,8 +110,8 @@ nav .right {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   padding-bottom: 30px;
   padding-top: 30px;
 }
@@ -178,8 +184,8 @@ nav .right {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
 }
 
 .electronics .title h2 {
@@ -208,8 +214,8 @@ nav .right {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
 }
 
 .electronics .card-group .spans:nth-last-child(1) {
@@ -222,8 +228,8 @@ footer {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   max-width: 100%;
   padding: 50px;
 }
@@ -233,8 +239,8 @@ footer .foot-left {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
+  -ms-flex-pack: space-evenly;
+  justify-content: space-evenly;
 }
 
 footer .foot-left img {
@@ -279,8 +285,8 @@ footer .foot-right img {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
 }
 
 .search .sc1 {
@@ -292,8 +298,8 @@ footer .foot-right img {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   margin-top: 20px;
 }
 
@@ -308,15 +314,10 @@ footer .foot-right img {
 }
 
 .search .sc2 {
-  width: 70%;
   border-left: 1px solid #888;
   border-right: 1px solid #888;
   padding: 20px;
-}
-
-.search .sc2 h2 {
-  font-size: 22px;
-  font-weight: bold;
+  width: 70%;
 }
 
 .search .sc2 img {
@@ -344,8 +345,8 @@ footer .foot-right img {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
 }
 
 .search .card .first {
@@ -357,19 +358,38 @@ footer .foot-right img {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
 }
 
-.search .card .last button {
+.search .card .last .pd {
   background-color: #d35266;
-  border: none;
+  border: 0;
   border-radius: 3px;
   color: #fff;
 }
 
-.search .card .last button:hover {
-  color: #d35266;
+.search .card .last .pd:hover {
   background-color: #fff;
+  color: #d35266;
 }
-/*# sourceMappingURL=app.css.map */
+
+.search .bts {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+}
+
+.search .bts button {
+  background-color: #fff;
+  border: 0;
+  margin: 5px;
+}
+
+.search .bts .bt1 {
+  background-color: #d35266;
+  color: #fff;
+}
