--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -235,7 +235,7 @@ footer {
       }
 
       &:nth-child(2) {
-        margin-top: 20px;
+        // margin-top: 20px;
       }
     }
 
@@ -253,6 +253,7 @@ footer {
           a {
             color: $dark;
             font-size: 12px;
+            text-transform: uppercase;
           }
         }
       }
@@ -262,6 +263,13 @@ footer {
   .foot-right {
     img {
       margin-left: 30px;
+    }
+    @media (max-width: 991px) {
+      display: flex;
+      flex-direction: column;
+      img {
+        margin-bottom: 30px;
+      }
     }
   }
 }
